<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dear Diary</string>
    <string name="title_main">My Diary</string>
    <string name="empty_state_title">No entries yet</string>
    <string name="empty_state_subtitle">Tap \"+\" to create first one</string>
    <string name="hint_title">Title</string>
    <string name="hint_content">What I was thinking today...</string>
    <string name="button_save">Save</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="button_pick_image">Add/Change image</string>
    <string name="title_settings">Settings</string>
    <string name="settings_language">Language</string>
    <string name="language_russian">Russian</string>
    <string name="language_english">English</string>
    <string name="settings_theme">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="search_hint">Search entries...</string>
    <string name="new_entry">New entry</string>
    <string name="entry">Entry</string>
    <string name="image">Image</string>
    <string name="account">Account</string>
    <string name="user_id">Your user ID:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete_confirm">Delete entry?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="entry_deleted">Entry deleted</string>
    <string name="entry_updated">Entry updated</string>
    <string name="entry_saved">Entry saved</string>
    <string name="enter_title">Enter title</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
</resources>